style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  width: 100%;
}

/* why vars , developers create multiple website, so create root variables so the website components remains consistance throughoutt each page  ( scs) */
:root{
    /* Bachground colors */
    --bg-primary-color: #0c0c0c; /* variables */

    /* text Colors */
    --text-primary-color: #f0f0f0;

    /* Spacing */
    --space-xs: 4px; /* extra small */
    --space-sm: 8px; /* small */
    --space-md: 16px; 
    --space-lg: 24px;
    --space-xl: 32px; 
    --space-2xl: 40px; 
    --space-3xl: 48px; 

    /* Border colors */
    --border-primary-color: #333333;

    /* Border radius */
    --border-radius-xs: 4px; 
    --border-radius-sm: 8px; 
    --border-radius-md: 12px; 
    --border-radius-lg: 16px;
    --border-radius-xl: 20px; 
    --border-radius-2xl: 24px; 
    --border-radius-3xl: 48px; 
}

html{
    /* background-color: black;
    color: white; */

    background-color: var(--bg-primary-color);
    color: var(--text-primary-color);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

main, section{
    width: 100%;
    height: 100%;
}

section{
    /* padding: 40px; */
    padding: var(--space-2xl); 
    display: flex;
    flex-direction: column;
    /* align-items: stretch; */
    height: 100%;
    /* background-color: rgb(9,9,75); */
    gap: var(--space-lg);
}
section .infos{
    display: flex;
    justify-content: space-between;
}
.info{
    padding: var(--space-sm) var(--space-md);
    border: 1px solid var(--border-primary-color);
    border-radius: var(--border-radius-sm);
}

.board{
    border: 1px solid var(--border-primary-color);
    flex-grow: 1;  /* felx grow occupies all height left from parent  */

    /* display: flex; blocks squised flex shrinked in on elien
    flex-wrap: wrap; still problem so use grid */

    display: grid;
    /*  we don't know number of colums and row it depends on display */

    grid-template-columns: repeat(auto-fill, 30px);
    /* take width of each particular coloum 30 px and repeat  until filled , if any space is too small leaves it */ /* width / 30 -> number.43 remaining 0.43 is th eamount of space that do not get filled */

    grid-template-rows: repeat(auto-fill, 30px);

    

    

}


.block{
    width: 30px;
    height: 30px;
    border: 1px solid var(--border-primary-color);
    /* flex-shrink: 0; overflow */


}

